; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/kbdfans/kbd6x/keymaps/konstantin/extr_keymap.c_check_light_led.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/kbdfans/kbd6x/keymaps/konstantin/extr_keymap.c_check_light_led.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@L_FN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @check_light_led to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_light_led(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %5 = call i64 @IS_LED_ON(i32 %3, i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 (...) @caps_light()
  br label %18

9:                                                ; preds = %1
  %10 = load i32, i32* @L_FN, align 4
  %11 = call i64 @IS_LAYER_ON(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = call i32 (...) @fn_light()
  br label %17

15:                                               ; preds = %9
  %16 = call i32 (...) @restore_light()
  br label %17

17:                                               ; preds = %15, %13
  br label %18

18:                                               ; preds = %17, %7
  ret void
}

declare dso_local i64 @IS_LED_ON(i32, i32) #1

declare dso_local i32 @caps_light(...) #1

declare dso_local i64 @IS_LAYER_ON(i32) #1

declare dso_local i32 @fn_light(...) #1

declare dso_local i32 @restore_light(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
